# lawsy-pharma

./: .dockerignore  .env.example  .gitignore  Makefile  PHARMA_CUSTOMIZATION.md  README.md  pyproject.toml  test_pharma_system.py
.github/ISSUE_TEMPLATE/: -feature-request--xxx.md  bug-report.md  feature-request.md
.github/workflows/: cd.yaml
.streamlit/: config.toml
prompts/violation_summary/: business.yaml  expert.yaml  general.yaml  marketer.yaml
src/: prompt_test_ver2.ipynb  report.html
src/kokkai_crawler/: main.py
src/lawsearch/: main.py
src/lawsearch/app/: Dockerfile  app.py
src/lawsearch/encoder/: me5.py  openai.py
src/lawsy/: main.py
src/lawsy/ai/: make_mindmap.py  mindmap_maker.py  outline_creater.py  pharma_query_processor.py  query_expander.py  query_refiner.py  report_writer.py  violation_summarizer.py  violation_summary_prompt.py
src/lawsy/ai/utils/: stream_writer.py
src/lawsy/app/: Dockerfile  app.py  config.py  page.py  report.py  research.py
src/lawsy/app/_pages/: exp_lawsy_with_google_search.py  exp_lawsy_with_tavily_search.py  lawsy.py  vector_search.py
src/lawsy/app/styles/: decorate_html.py  style.css
src/lawsy/app/templates/: pharma_templates.py
src/lawsy/app/utils/: cloud_logging.py  cookie.py  history.py  lm.py  mindmap.py  preload.py
src/lawsy/chunker/: article_chunker.py
src/lawsy/data/: egov_xml_processor.py  pharma_law_downloader.py  pharma_terms.json  pmda_investigation_report.md
src/lawsy/encoder/: me5.py  openai.py
src/lawsy/retriever/: faiss.py  point.py  search_result.py
src/lawsy/retriever/article_search/: faiss.py
src/lawsy/retriever/web_search/: duckduckgo_search.py  googe_search.py  tavily_search.py
src/lawsy/utils/: logging.py
